<resources>
    <string name="app_name">AppNicolasCamachoLesmes</string>
    <string name="logo">logo</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="city">Ciudad</string>
    <string name="username">Nombre de Usuario</string>
    <string name="backBtn">Volver</string>
    <string name="logBtn">Iniciar Sesión</string>
    <string name="regBtn">Crear Cuenta</string>
    <string name="homeText">Inicio</string>
    <string name="example">Esta es una ventana de ejemplo</string>

</resources>