<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createaccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    tools:context=".CreateAccountActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/cat_dog"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:inputType="textEmailAddress"
            android:id="@+id/email_input"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:inputType="textPassword"
            android:id="@+id/pass_input"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:inputType="text"
            android:id="@+id/username_input"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/city"
            android:hint="@string/city"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:inputType="text"
            android:id="@+id/city_input"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regBtn"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/register_btn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backBtn"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/back_btn"
            />




    </LinearLayout>
</RelativeLayout>