<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="460dp"
            android:layout_height="290dp"
            android:src="@drawable/cat_dog"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeText"
            android:textAlignment="center"
            android:textSize="60sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:textAlignment="center"
            android:textSize="28sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backBtn"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/back_btn"
            />


    </LinearLayout>
</RelativeLayout>